k8s/foo-bar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-app
  labels:
    app: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: bar-app
          image: hashicorp/http-echo
          args:
            - "-text=bar test has been successful!"

          readinessProbe:
            httpGet:
              path: /health
              port: 5678
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5678
            initialDelaySeconds: 15
            periodSeconds: 10
          ports:
            - containerPort: 5678
          resources:
            requests:
              cpu: "300m"
              memory: "128Mi"
            limits:
              cpu: "400m"
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-app
  labels:
    app: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: foo-app
          # https://github.com/hashicorp/http-echo
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=foo test has been successful!"
            
          ports:
            - containerPort: 5678
          resources:
            requests:
              cpu: "1m"
              memory: "4Mi"
            limits:
              cpu: "3m"
              memory: "8Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  type: LoadBalancer
  selector:
    app: bar-service
  ports:
    - port: 5678
      
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  type: LoadBalancer
  selector:
    app: foo-service
  ports:
    - port: 5678
      # targetPort: 8080
